Add mime-type detection by Tika
#1

--- a/task-runner-http/build.gradle
+++ b/task-runner-http/build.gradle
@@ -24,6 +24,9 @@ java {
             //
             implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.10.3'
             implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.10.3'
+            // File type detection
+            implementation group: 'org.apache.tika', name: 'tika-core', version: '1.18'
+
         }
     }
 }
